[package]
name = "rsa-rust-tool"
version = "0.1.0"
edition = "2021"
description = "Production-grade RSA CTF attack tool — Rust port of RsaCtfTool"
license = "MIT"

[[bin]]
name = "RsaRustTool"
path = "src/main.rs"

[dependencies]
rug = { version = "1.24", features = ["integer", "rational", "float"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
